# vvasylkovskyi-portfolio

./: .gitignore  README.md  docker-compose.yaml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  terraform.tfstate
.github/workflows/: docker.yaml  init-schema.yaml  main.yaml  rpi-deploy.yaml
blog-content/: ansible-configuring-rpi.md  autoplay-behavior.md  cea608-embedded-subtitles.md  encrypting-video-with-clearkey-WIP.md  mcp-architecture.md  media-basics.md  monitor-your-traffic.md  mp4-box-container.md  mse-eme-mpeg-dash-WIP.md  next-js-microfrontends.md  setting-up-open-web-analytics.md  text-style-hierarchy copy.md
blog-content/data/: adding-fonts-to-webpack.json  adding-react-routing.json  adding-react-to-our-client-app.json  (+41 more)
deploy/: Dockerfile
docs/: clerk.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
infra/: .gitignore  .terraform.lock.hcl  README.md  alb.tf  auto_scaling_group.tf  backend.tf  cloud_front.tf  datadog.tf  ec2.tf  ecs.tf  gateway.tf  iam.tf  main.tf  network.tf  outputs.tf  pagerduty.tf  route53.tf  secrets.tf  security_group.tf  ssl.tf  subnet.tf  terraform.tfvars  update-secrets.sh  user_data.tpl  variables.tf
initdb/: schema.sql
nginx/: Dockerfile.nginx  README.md  build-docker.sh  default.conf  index.html  nginx.conf  run-docker-container.sh
scripts/: get-all-posts.ts  get-post-by-id.ts  seed-db.ts
server/: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
server/deploy/: Dockerfile
server/src/ai_personal_lawyer/: invoke_agent.py  main.py
server/src/ai_personal_lawyer/agent_core/: __init__.py  agent_factory.py  lang_graph_agent.py  lang_graph_rag_agent.py  prompts.py  state.py  tools.py
server/src/logger/: cust_logger.py
server/src/rag_index/: rag_index.py
src/: middleware.ts
workflows/: docker.yaml
(+392 files in other folders)
